--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                                                     <p class="para">音楽をしていたという事もあり、作曲や弦楽器の演奏ができます。</p>
                                                     <p class="para">海外留学を経験して以来外国語に興味が持ち、日常英会話と少しの中国語が話せます。</p>
                                                 </div>
-                                                <p class="tra" style="font-size: 2.5vw;text-align: right;"><a target="_blank" href="https://docs.google.com/document/d/1579UK49c0QWP622gYk_Tfg0sFzj1-eBTBj6Q2QR6MEQ/edit">CURRICULUM VITAE→</a></p>
+                                                <p class="tra" style="font-size: 2.5vw;text-align: right;"><a target="_blank" href="https://docs.google.com/spreadsheets/d/1_ArB3lBxJ12s6uigQRcqyz8yCp15cwNzoGkc2RLIXgA/edit#gid=0">CURRICULUM VITAE→</a></p>
                                             </div>
                                         </div>
                                     </div>
@@ -227,7 +227,7 @@
                                             <div class="sec_title" style="margin-top: 30px;">ポートフォリオ</div>
                                         </div>
                                         <div class="flex" style="margin-bottom: 20px; align-items: center;position: relative;overflow: hidden;">
-                                            <p class="tra" style="font-size: 2.5vw; position: absolute; right: 6.25vw; bottom: 5%; z-index: 2;"><a target="_blank" href="https://docs.google.com/document/d/1579UK49c0QWP622gYk_Tfg0sFzj1-eBTBj6Q2QR6MEQ/edit">DESCRIPTION→</a></p>
+                                            <p class="tra" style="font-size: 2.5vw; position: absolute; right: 6.25vw; bottom: 5%; z-index: 2;"><a target="_blank" href="https://docs.google.com/presentation/d/1OWL1rnQQY9D_Vbecd7p7EayQgLnIkIvP15OC0xNNtpY/edit#slide=id.p1">DESCRIPTION→</a></p>
                                             <img src="img/14.png" alt="" style="position: relative;z-index: 0;">
                                             <div class="flex"style="position: absolute; z-index: 1;width: 100%; align-items: center;">
                                                 <div class="content-container1 w-50">
@@ -342,88 +342,7 @@
                                 </div>
                             </section>
                             <section id="section5"></section>
-                            <!-- <section id="section4">
-                                <div class="content-wrapper"><div class="header-bg2"></div>
-                                    <div class="container1">
-                                        <v-card flat tile max-width="500" class="mx-auto bg-primary">
-                                            <v-window v-model="onboarding" continuous>
-                                                <v-window-item v-for="(feature, index) in features" :key="index" style="align-items: flex-end;">
-                                                    <v-card color="grey">
-                                                    <v-row class="py-5" align="end" justify="center">
-                                                        <h1 style="font-size: 4rem;">
-                                                           {{  feature.type }}
-                                                        </h1>
-                                                    </v-row>
-                                                    <ul>
-                                                        <li v-for="(list, i) in feature.content" :key="i">{{ list }}</li>
-                                                    </ul>
-                                                    </v-card>
-                                                </v-window-item>
-                                            </v-window>
-                                            <v-card-actions class="justify-space-between">
-                                            <v-btn text @click="prev">
-                                                <v-icon>mdi-chevron-left</v-icon>
-                                            </v-btn>
-                                            <v-item-group v-model="onboarding" class="text-center" mandatory>
-                                                <v-item v-for="(feature, index) in features" :key="index" v-slot="{ active, toggle }">
-                                                <v-btn :input-value="active" icon @click="toggle">
-                                                    <v-icon>mdi-record</v-icon>
-                                                </v-btn>
-                                                </v-item>
-                                            </v-item-group>
-                                            <v-btn text @click="next">
-                                                <v-icon>mdi-chevron-right</v-icon>
-                                            </v-btn>
-                                            </v-card-actions>
-                                        </v-card>
-                                    </div>
-                                </div>
-                            </section> -->
-                            <!-- <section id="section4">
-                                <div class="content-wrapper" :style="video1Style"><div class="header-bg2"></div>
-                                    <div class="container1">
-                                        <div class="content-container">
-                                            <h3>ログインページ</h3>
-                                            <ul>
-                                                <li>認証</li>
-                                                <li>会員登録</li>
-                                            </ul>
-                                            <h3>メインページ</h3>
-                                            <ul>
-                                                <li>いいね</li>
-                                                <li>いいね閲覧</li>
-                                                <li>コメント</li>
-                                                <li>コメント閲覧</li>
-                                                <li>自分の投稿閲覧</li>
-                                                <li>フォロワーの投稿</li>
-                                                <li>友達検索</li>
-                                            </ul>
-                                            <h3>投稿ページ</h3>
-                                            <ul>
-                                                <li>写真のリサイズ</li>
-                                                <li>描画</li>
-                                                <li>フィルター</li>
-                                                <li>保存</li></li>
-                                            </ul>
-                                            <h3>プロフィールページ</h3>
-                                            <ul>
-                                                <li>いいね</li>
-                                                <li>いいね閲覧</li>
-                                                <li>コメント</li>
-                                                <li>コメント閲覧</li>
-                                                <li>自分の投稿閲覧</li>
-                                                <li>投稿写真の削除</li>
-                                                <li>フォロワー閲覧</li>
-                                                <li>プロフィール写真変更</li>
-                                                <li>アバター写真変更</li>
-                                                <li>ユーザー情報変更</li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </section> -->
                         </div>
-                        <!-- <button class="page-btn" @click="scrollTop()"></button> -->
                     </main>
                     <footer>
                         <div class="footer">
@@ -453,19 +372,19 @@
                                 <div class="ul">
                                     <div style="font-size: 20px;font-family: proxima-nova,sans-serif;padding-bottom: 10px;">Resume</div>
                                     <div class="li"><a href="https://docs.google.com/document/d/14bj2fv6hF8RhSgoRHrEDpfA1eTQt22MNNj3rENHOwvY/edit">履歴書</a></div>
-                                    <div class="li"><a href="https://docs.google.com/document/d/1579UK49c0QWP622gYk_Tfg0sFzj1-eBTBj6Q2QR6MEQ/edit">職務経歴書</a></div>
-                                    <div class="li"><a href="https://docs.google.com/presentation/d/16AKBahZMnhDwnSolRcH3vBLlouDwai7lOjLfmX8jdUY/edit#slide=id.ga38c966850_0_6">ポートフォリオ</a></div>
+                                    <div class="li"><a href="https://docs.google.com/spreadsheets/d/1_ArB3lBxJ12s6uigQRcqyz8yCp15cwNzoGkc2RLIXgA/edit#gid=0">職務経歴書</a></div>
+                                    <div class="li"><a href="https://docs.google.com/presentation/d/1OWL1rnQQY9D_Vbecd7p7EayQgLnIkIvP15OC0xNNtpY/edit#slide=id.p1">ポートフォリオ</a></div>
                                     <div class="li"><a href=""></a></div>
                                 </div>
                                 <div class="ul">
-                                    <div style="font-size: 20px;font-family: proxima-nova,sans-serif;padding-bottom: 10px;">Github</div>
+                                    <div style="font-size: 20px;font-family: proxima-nova,sans-serif;padding-bottom: 10px;"><a class="text-white" href="https://github.com/lnoueryo">Github</a></div>
                                     <div class="li"><a href="https://github.com/lnoueryo/Mymemories">My Memories</a></div>
                                     <div class="li"><a href="https://github.com/lnoueryo/Mymemories/tree/master/app/Http/Controllers">Controller</a></div>
                                     <div class="li"><a href="https://github.com/lnoueryo/Inouegram/tree/master/app">Model</a></div>
                                     <div class="li"><a href="https://github.com/lnoueryo/Mymemories/tree/master/resources/ts/components">View</a></div>
                                 </div>
                                 <div class="ul">
-                                    <div style="font-size: 20px;font-family: proxima-nova,sans-serif;padding-bottom: 10px;">Qiita</div>
+                                    <div style="font-size: 20px;font-family: proxima-nova,sans-serif;padding-bottom: 10px;"><a class="text-white" href="https://qiita.com/popo62520908">Qiita</a></div>
                                     <div class="li" v-for="(page, index) in qiita" :key="index">
                                         <a :href="page.url" target="_blank">{{ page.title }}</a>
                                     </div>
